bigger spacing to prevent visible choises

--- a/styles/app.less
+++ b/styles/app.less
@@ -27,7 +27,7 @@ body {
 
 .project-jump {
   position: absolute;
-  top: -70px;
+  top: -350px;
   left: 50%;
   margin-left: -175px;
   width: 350px;
